# c_cpp_vscode_template_noob

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: README.md  usage.md
example/: README.md
example/C/: README.md
example/C/01_overview/: main.c
example/C/02_types/: CMakePresets.json  main.c
example/C/03_operators/: CMakeLists.txt  main.c
example/C/04_control_flow/: main.c
example/C/05_functions/: main.c
example/C/06_arrays/: main.c
example/C/07_pointers/: main.c
example/C/08_strings/: main.c
example/C/09_struct_union/: main.c
example/C/10_preprocessor/: main.c
example/C/11_memory/: main.c
example/C/12_file_io/: main.c
example/C/13_bitwise/: main.c
example/C/14_multi_file/: main.c
example/C/15_stdlib_adv/: main.c
example/C/16_best_practices/: main.c
example/C/17_virtual_function_impl/: main.c
example/C/18_advanced_features/: CMakeLists.txt  main.c
src/: main.cpp
